stateDiagram-v2
    state "Khởi tạo" as INIT
    state "Kiểm tra IGN" as CHECK_IGN
    state "Lái xe" as DRIVING
    state "Đỗ xe" as PARKED
    state "Cảnh báo" as ALERT
    state "Nhịp định kỳ" as HEARTBEAT
    state "Ngủ" as SLEEP

    [*] --> INIT
    INIT --> CHECK_IGN
    CHECK_IGN --> DRIVING: IGN ON
    CHECK_IGN --> PARKED: IGN OFF
    PARKED --> ALERT: Có rung
    PARKED --> HEARTBEAT: Tới chu kỳ heartbeat
    PARKED --> SLEEP: Đủ điều kiện ngủ
    DRIVING --> PARKED: Mất IGN
    ALERT --> DRIVING: IGN ON
    ALERT --> PARKED: Hết báo động
    HEARTBEAT --> SLEEP
    SLEEP --> INIT
